# OpenSandbox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile-ingress-noroot  README.md  RunCommandRequest.kt  artifacthub-repo.yml  docker-compose.yml  downloaded_config.json  downloaded_readme.md  go.mod  opensandbox-controller-managerDeployment.yaml  test_download.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
cli/: README.md
console/: CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json
docs/: README_zh.md  credential-vault.md  credential-vault_zh.md  execd-path-migration.md  index.md  pause-resume.md  release-automation.md  security-review.md  single_host_network.md
examples/: README.md
kubernetes/: .golangci.yml  AGENTS.md  Dockerfile  Dockerfile.image-committer  Makefile  README-ZH.md  README.md  go.mod  go.sum
opensandbox/: sdk.py
opensandbox-controller-manager/: deployment.yaml
oseps/: 0001-fqdn-based-egress-control.md  0003-volume-and-volumebinding-support.md  0004-secure-container-runtime.md  0005-fast-sandbox-runtime-support.md  0007-fast-sandbox-runtime-support.md  0008-pause-resume-rootfs-snapshot.md  0009-auto-renew-sandbox-on-ingress-access.md  0010-opentelemetry-instrumentation.md  0011-runtime-driver-plugin-interface.md  0011-secure-access-endpoint.md  0012-credential-vault.md  0012-multi-tenancy.md  README.md
sandboxes/: README.md
scripts/: add-license.sh  ci-docker-cleanup.sh  csharp-e2e.sh  go-e2e.sh  java-e2e.sh  javascript-e2e.sh  manage_sandbox_version.py  python-credential-vault-e2e.sh  python-e2e.sh  python-k8s-e2e-ingress.sh  python-k8s-e2e-multi-tenant.sh  python-k8s-e2e.sh  test_manage_sandbox_version.py  verify-license.sh
server/: DEVELOPMENT.md  Dockerfile  Dockerfile-noroot  README.md  README_zh.md  TROUBLESHOOTING.md  TROUBLESHOOTING_zh.md  build.sh  config.toml  configuration.md  docker-compose.example.yaml  (+6 more)
tests/python/: Makefile  README.md  pyproject.toml
tests/python/tests/: __init__.py  base_e2e_test.py  test_code_interpreter_e2e.py  test_code_interpreter_e2e_sync.py  test_command_resume_e2e.py  test_credential_vault_e2e.py  test_sandbox_e2e.py  test_sandbox_e2e_sync.py  test_sandbox_manager_e2e.py  test_sandbox_manager_e2e_sync.py  test_sandbox_pool_e2e_async.py  test_sandbox_pool_e2e_sync.py
tests/python/tests/support/: credential_vault_echo_server.py
(+947 files in other folders)
